--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,15 @@
 .app {
   font-family: sans-serif;
-  /* text-align: center; */
+  border-radius: 20px;
+  padding: 10px;
+  color: teal;
+  background-color: lightgray;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  background-color: gray;
 }
